💅 Fix page alignment

--- a/src/components/screens/monitor/delegates/forgingDetails.css
+++ b/src/components/screens/monitor/delegates/forgingDetails.css
@@ -2,8 +2,8 @@
 @import '../../../../app/mixins.css';
 
 .contentWrapper {
-  & > div {
-    padding: 0 20px;
+  & > div:not(:last-child) {
+    padding-right: 40px;
   }
 
   & h3 {
